objects/Projects__c.object
<CustomObject>
    <label>Projects</label>
    <nameField>
        <label>Projects Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>project_id__c</fullName>
        <externalId>true</externalId>
        <label>project_id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
<fields>
        <fullName>Test_Field_Three__c</fullName>
        <externalId>true</externalId>
        <label>Test Field Three</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inbox_project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>inbox_project</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>